{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 93,
  "lineage": "27c3b818-9717-b7da-889b-524cac1de499",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "30000-32767"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-29T13:47:22.787-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sdtd-2/global/firewalls/allow-web-traffic",
            "log_config": [],
            "name": "allow-web-traffic",
            "network": "https://www.googleapis.com/compute/v1/projects/sdtd-2/global/networks/k8s-vpc",
            "params": [],
            "priority": 1000,
            "project": "sdtd-2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sdtd-2/global/firewalls/allow-web-traffic",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "master",
              "worker"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "ipip"
              }
            ],
            "creation_timestamp": "2026-01-29T13:47:22.772-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sdtd-2/global/firewalls/allow-internal",
            "log_config": [],
            "name": "allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/sdtd-2/global/networks/k8s-vpc",
            "params": [],
            "priority": 1000,
            "project": "sdtd-2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sdtd-2/global/firewalls/allow-internal",
            "source_ranges": [
              "10.240.0.0/24",
              "192.168.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-29T13:47:22.261-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sdtd-2/global/firewalls/allow-ssh-gateway",
            "log_config": [],
            "name": "allow-ssh-gateway",
            "network": "https://www.googleapis.com/compute/v1/projects/sdtd-2/global/networks/k8s-vpc",
            "params": [],
            "priority": 1000,
            "project": "sdtd-2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sdtd-2/global/firewalls/allow-ssh-gateway",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "gateway"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260128",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-ssd"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/sdtd-2/zones/europe-west1-b/disks/gateway"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2026-01-29T13:47:44.332-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/sdtd-2/zones/europe-west1-b/instances/gateway",
            "instance_id": "5173285967927602031",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQC4nf5mv5R7EQVBMB11LBxm8Sf1U0hWrOpZ2AvoO/Ab0BjtRJGmSJjAl8FZYN1VRnWGPcmbOco5THImENmmcDvuMVywbuo+91wCfjXlbwkzHHPU83OfYpSGJPIJ8uHbCOj7XBsk2k/QSHHNIDUO6toYkBcg/ThOGlMqZjMrjGsDzCpT9lAnBRJG2veQqU2AGdKqLoiiLlk8skuG9KiJ7lffWDd99AAWzrRfAsLslyobXAgfSp1keABX6vhx7I8fcs1zXAphK78payf3LFci6PLe9F5DExEVv96yGO29G8S46SNqn1Urm/vhwW3vYseGoDqHYQGH13yW8u8dvREiaKZhdxb4zqEx+rviLae5y5MVsFHZ6rL2IMzhGxCOzv2uMRwbxVOwjiPEoz4pTQ+cTj4AV+Dsi2Jm5vYHiKKt0yn5Bb [...]
            },
            "metadata_fingerprint": "lq3hy7bEwa0=",
            "name": "gateway",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.14.74.12",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/sdtd-2/global/networks/k8s-vpc",
                "network_ip": "10.240.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/sdtd-2/regions/europe-west1/subnetworks/k8s-subnet",
                "subnetwork_project": "sdtd-2"
              }
            ],
            "project": "sdtd-2",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/sdtd-2/zones/europe-west1-b/instances/gateway",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "gateway"
            ],
            "tags_fingerprint": "UrM6jlsUTDs=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet",
            "tls_private_key.ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260128",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/sdtd-2/zones/europe-west1-b/disks/master"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2026-01-29T13:47:44.612-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/sdtd-2/zones/europe-west1-b/instances/master",
            "instance_id": "8099702247620242287",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQC4nf5mv5R7EQVBMB11LBxm8Sf1U0hWrOpZ2AvoO/Ab0BjtRJGmSJjAl8FZYN1VRnWGPcmbOco5THImENmmcDvuMVywbuo+91wCfjXlbwkzHHPU83OfYpSGJPIJ8uHbCOj7XBsk2k/QSHHNIDUO6toYkBcg/ThOGlMqZjMrjGsDzCpT9lAnBRJG2veQqU2AGdKqLoiiLlk8skuG9KiJ7lffWDd99AAWzrRfAsLslyobXAgfSp1keABX6vhx7I8fcs1zXAphK78payf3LFci6PLe9F5DExEVv96yGO29G8S46SNqn1Urm/vhwW3vYseGoDqHYQGH13yW8u8dvREiaKZhdxb4zqEx+rviLae5y5MVsFHZ6rL2IMzhGxCOzv2uMRwbxVOwjiPEoz4pTQ+cTj4AV+Dsi2Jm5vYHiKKt0yn5Bb [...]
            },
            "metadata_fingerprint": "lq3hy7bEwa0=",
            "name": "master",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/sdtd-2/global/networks/k8s-vpc",
                "network_ip": "10.240.0.10",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/sdtd-2/regions/europe-west1/subnetworks/k8s-subnet",
                "subnetwork_project": "sdtd-2"
              }
            ],
            "project": "sdtd-2",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/sdtd-2/zones/europe-west1-b/instances/master",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "master"
            ],
            "tags_fingerprint": "4y7qQ8dL1yM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet",
            "tls_private_key.ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260128",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 100,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/sdtd-2/zones/europe-west1-b/disks/node-0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2026-01-29T13:47:44.512-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/sdtd-2/zones/europe-west1-b/instances/node-0",
            "instance_id": "6019542761740856175",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-standard-4",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQC4nf5mv5R7EQVBMB11LBxm8Sf1U0hWrOpZ2AvoO/Ab0BjtRJGmSJjAl8FZYN1VRnWGPcmbOco5THImENmmcDvuMVywbuo+91wCfjXlbwkzHHPU83OfYpSGJPIJ8uHbCOj7XBsk2k/QSHHNIDUO6toYkBcg/ThOGlMqZjMrjGsDzCpT9lAnBRJG2veQqU2AGdKqLoiiLlk8skuG9KiJ7lffWDd99AAWzrRfAsLslyobXAgfSp1keABX6vhx7I8fcs1zXAphK78payf3LFci6PLe9F5DExEVv96yGO29G8S46SNqn1Urm/vhwW3vYseGoDqHYQGH13yW8u8dvREiaKZhdxb4zqEx+rviLae5y5MVsFHZ6rL2IMzhGxCOzv2uMRwbxVOwjiPEoz4pTQ+cTj4AV+Dsi2Jm5vYHiKKt0yn5Bb [...]
            },
            "metadata_fingerprint": "lq3hy7bEwa0=",
            "name": "node-0",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/sdtd-2/global/networks/k8s-vpc",
                "network_ip": "10.240.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/sdtd-2/regions/europe-west1/subnetworks/k8s-subnet",
                "subnetwork_project": "sdtd-2"
              }
            ],
            "project": "sdtd-2",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/sdtd-2/zones/europe-west1-b/instances/node-0",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "worker"
            ],
            "tags_fingerprint": "uvqiNQvnefU=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet",
            "tls_private_key.ssh_key"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260128",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 100,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/sdtd-2/zones/europe-west1-b/disks/node-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2026-01-29T13:47:44.600-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/sdtd-2/zones/europe-west1-b/instances/node-1",
            "instance_id": "1369019029092985711",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-standard-4",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQC4nf5mv5R7EQVBMB11LBxm8Sf1U0hWrOpZ2AvoO/Ab0BjtRJGmSJjAl8FZYN1VRnWGPcmbOco5THImENmmcDvuMVywbuo+91wCfjXlbwkzHHPU83OfYpSGJPIJ8uHbCOj7XBsk2k/QSHHNIDUO6toYkBcg/ThOGlMqZjMrjGsDzCpT9lAnBRJG2veQqU2AGdKqLoiiLlk8skuG9KiJ7lffWDd99AAWzrRfAsLslyobXAgfSp1keABX6vhx7I8fcs1zXAphK78payf3LFci6PLe9F5DExEVv96yGO29G8S46SNqn1Urm/vhwW3vYseGoDqHYQGH13yW8u8dvREiaKZhdxb4zqEx+rviLae5y5MVsFHZ6rL2IMzhGxCOzv2uMRwbxVOwjiPEoz4pTQ+cTj4AV+Dsi2Jm5vYHiKKt0yn5Bb [...]
            },
            "metadata_fingerprint": "lq3hy7bEwa0=",
            "name": "node-1",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/sdtd-2/global/networks/k8s-vpc",
                "network_ip": "10.240.0.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/sdtd-2/regions/europe-west1/subnetworks/k8s-subnet",
                "subnetwork_project": "sdtd-2"
              }
            ],
            "project": "sdtd-2",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/sdtd-2/zones/europe-west1-b/instances/node-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "worker"
            ],
            "tags_fingerprint": "uvqiNQvnefU=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet",
            "tls_private_key.ssh_key"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260128",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 100,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/sdtd-2/zones/europe-west1-b/disks/node-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2026-01-29T13:47:44.730-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/sdtd-2/zones/europe-west1-b/instances/node-2",
            "instance_id": "6071992730560916335",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-standard-4",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQC4nf5mv5R7EQVBMB11LBxm8Sf1U0hWrOpZ2AvoO/Ab0BjtRJGmSJjAl8FZYN1VRnWGPcmbOco5THImENmmcDvuMVywbuo+91wCfjXlbwkzHHPU83OfYpSGJPIJ8uHbCOj7XBsk2k/QSHHNIDUO6toYkBcg/ThOGlMqZjMrjGsDzCpT9lAnBRJG2veQqU2AGdKqLoiiLlk8skuG9KiJ7lffWDd99AAWzrRfAsLslyobXAgfSp1keABX6vhx7I8fcs1zXAphK78payf3LFci6PLe9F5DExEVv96yGO29G8S46SNqn1Urm/vhwW3vYseGoDqHYQGH13yW8u8dvREiaKZhdxb4zqEx+rviLae5y5MVsFHZ6rL2IMzhGxCOzv2uMRwbxVOwjiPEoz4pTQ+cTj4AV+Dsi2Jm5vYHiKKt0yn5Bb [...]
            },
            "metadata_fingerprint": "lq3hy7bEwa0=",
            "name": "node-2",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/sdtd-2/global/networks/k8s-vpc",
                "network_ip": "10.240.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/sdtd-2/regions/europe-west1/subnetworks/k8s-subnet",
                "subnetwork_project": "sdtd-2"
              }
            ],
            "project": "sdtd-2",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/sdtd-2/zones/europe-west1-b/instances/node-2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "worker"
            ],
            "tags_fingerprint": "uvqiNQvnefU=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet",
            "tls_private_key.ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_bgp_always_compare_med": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/sdtd-2/global/networks/k8s-vpc",
            "mtu": 0,
            "name": "k8s-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "7205703314604190652",
            "numeric_id": "7205703314604190652",
            "project": "sdtd-2",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sdtd-2/global/networks/k8s-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-29T13:47:22.118-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/sdtd-2/regions/europe-west1/routers/k8s-router",
            "name": "k8s-router",
            "network": "https://www.googleapis.com/compute/v1/projects/sdtd-2/global/networks/k8s-vpc",
            "project": "sdtd-2",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sdtd-2/regions/europe-west1/routers/k8s-router"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "sdtd-2/europe-west1/k8s-router/k8s-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "k8s-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "sdtd-2",
            "region": "europe-west1",
            "router": "k8s-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "type": "PUBLIC",
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_router.router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-29T13:47:22.220-08:00",
            "gateway_address": "10.240.0.1",
            "id": "projects/sdtd-2/regions/europe-west1/subnetworks/k8s-subnet",
            "ip_cidr_range": "10.240.0.0/24",
            "name": "k8s-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/sdtd-2/global/networks/k8s-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "sdtd-2",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sdtd-2/regions/europe-west1/subnetworks/k8s-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 7108599773398461317
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}